Fixes MP4 fragment generation

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -9,19 +9,20 @@
     <script src="demo.js"></script>
   </head>
   <body>
-    <h1>Media Source Extensions Live Demo</h1>
+    <h1>Low-Latency Live Streaming via Media Source Extensions</h1>
 
     <p>
       Copyright 2020
-      <a href="//chris.hiszpanski.name">Chris Hiszpanski</a>
+      <a href="//chris.hiszpanski.name">Chris Hiszpanski</a>.
+      All rights reserved.
     </p>
 
     <p>
       This is a demo of low-latency video streaming using the
       <a href="//w3c.github.io/media-source/">Media Source Extensions
       API</a>. The API is supported by all major browsers, with the
-      notable exception of Safari on most iOS devices. The API is
-      supported by Safari on iPad devices with iOS 13 or newer.
+      notable exception of Safari on most iOS devices (iPad devices with
+      iOS 13 or newer do support MSE).
     </p>
 
     <p>
